--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-minimal
 # Site settings
 username: Monlo
 user_description: Historias con datos
-user_title: Monserrat López
+user_title: Monserrat Lopez
 email: lopezmonserrat.14@gmail.com
