--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 theme: jekyll-theme-minimal
 title: Monlo
 author: Monserrat
+logo: /photo/1.jpeg
 name: Monlo
 email: lopezmonserrat.14@gmail.com
 description: Historias con datos
