--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,8 @@
 theme: jekyll-theme-minimal
 title: Monserrat Lopez
 author: Monserrat
-logo: /photo/1.jpeg
-name: Monlo
-email: lopezmonserrat.14@gmail.com
+logo: /photo/2.png
 description: Análisis de datos e investigación sobre políticas públicas
 show_excerpts: false # set to true to show excerpts on the homepage
 
-# generate social links in footer
-social_links:
-twitter: MonLopez_
-github:  Monlo
-instagram: monlopez__
 
