--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: Monserrat Lopez
+title: MONLO
 author: Monserrat
 logo: /photo/2.png
 description: Análisis de datos e investigación sobre políticas públicas
