--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ title: Monserrat Lopez
 author: Monserrat
 logo: /photo/2.png
 description: Análisis de datos e investigación sobre políticas públicas
-show_excerpts: false # set to true to show excerpts on the homepage
-
+show_excerpts: true # set to true to show excerpts on the homepage
+social-share: true
 
