--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,6 @@
 theme: jekyll-theme-minimal
-title: Monserrat Lopez
+title: Monserrat López
 author: Monserrat
 logo: /photo/2.png
 description: Análisis de datos e investigación sobre políticas públicas
 show_excerpts: true # set to true to show excerpts on the homepage
-plugins:
-  - jekyll-seo-tag
-  - jekyll-feed
-  - jekyll-sitemap
-  - jekyll-paginate
-  
-  # Jekyll SEO Tag (Optional)
-# =========================
-  links: MonLopez_
-
