--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Monserrat López
 author: Monserrat
-logo: /photo/1_uno.png
+logo: /photo/1_uno.jpeg
 description: Análisis de datos e investigación sobre políticas públicas
 show_excerpts: true # set to true to show excerpts on the homepage
